# quorum

./: .env.example  .gitignore  LICENSE  README.md  agent_config.example.yaml  app.py  committee.py  company_data.py  prompts.py  pyproject.toml  reliable_adapter.py  replay_data.py  requirements.txt  run_all.py  start_all.ps1  test_models.py
.streamlit/: config.toml
data/: aapl.json  ea.json  nvda.json
data/risks/: aapl.json  ea.json  nvda.json
docs/: business-case.md
transcripts/: aapl.json  ea.json  nvda.json
