[project]
name = "quorum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "band-sdk[anthropic,langgraph,pydantic-ai]>=1.0.0",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]
